[tool.poetry]
name = "pyramid_flower"
version = "0.0.1"
description = "Just a celery command to start flower with pyramid celery"
authors = ["Tomás Corrêa <tomas.correa@gmail.com>"]
repository = "https://github.com/tomascorrea/pyramid-flower"
documentation = "https://tomascorrea.github.io/pyramid-flower/"
readme = "README.md"
packages = [
  {include = "pyramid_flower"}
]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
flower = "^2.0.1"
pyramid-celery = "^4.0.0"
click = "^8.1.8"
celery = "^5.4.0"
pyramid = "^2.0.2"
tornado = "^6.4.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
deptry = "^0.16.2"
mypy = "^1.5.1"
pre-commit = "^3.4.0"
tox = "^4.11.1"
ruff = "^0.11.2"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.2"
mkdocs-material = "^9.2.7"
mkdocstrings = {extras = ["python"], version = "^0.26.1"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."celery.commands"]
flower = "pyramid_flower.script:flower"


[tool.mypy]
files = ["pyramid_flower"]
disallow_untyped_defs = "True"
disallow_any_unimported = "True"
no_implicit_optional = "True"
check_untyped_defs = "True"
warn_return_any = "True"
warn_unused_ignores = "True"
show_error_codes = "True"

[[tool.mypy.overrides]]
module = ["celery.*", "flower.*", "pyramid.*", "pyramid_celery.*"]
follow_untyped_imports = true



[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py39"
line-length = 120
fix = true
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
]

[tool.ruff.format]
preview = true

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["pyramid_flower"]


[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]
